--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="theme-color" content="#7D3974" />
+    <meta name="description" content="A sorting visualizer written in vanilla JavaScript that helps in understanding sorting algorithms in a better way!" />
+    <meta name="keywords" content="Shyren, Shyren More, Sorting Visualiser, Shyren More TSEC, Shyren More Sorting Visualiser, shyren_more, shyren.more">
     <title>Sorting Visualiser</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
@@ -16,7 +19,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
     />
     <link rel="stylesheet" href="css/style.css">
-
+    
     <script>
         const barpurple = "#2caeba"; // original color
         const merge_left_color = "#FF6701"; // left half of merging array.
